--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -37,6 +37,10 @@
   </PropertyGroup>
   <ItemGroup>
      <Compile Include="Assets\Scripts\StartMenu.cs" />
+     <Compile Include="Assets\Scripts\CakePlace.cs" />
+     <Compile Include="Assets\Scripts\Cake\Cake.cs" />
+     <Compile Include="Assets\Scripts\Cake\CakeLayer.cs" />
+     <Compile Include="Assets\Scripts\ClickerZone.cs" />
      <None Include="Assets\TextMesh Pro\Shaders\TMPro.cginc" />
      <None Include="Assets\TextMesh Pro\Shaders\TMP_SDF-Mobile Overlay.shader" />
      <None Include="Assets\TextMesh Pro\Shaders\TMP_Bitmap.shader" />
