--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -36,11 +36,20 @@
     <ImplicitlyExpandDesignTimeFacades>false</ImplicitlyExpandDesignTimeFacades>
   </PropertyGroup>
   <ItemGroup>
+     <Compile Include="Assets\Scripts\Player\Player.cs" />
+     <Compile Include="Assets\Scripts\Player\PlayerWallet.cs" />
      <Compile Include="Assets\Scripts\StartMenu.cs" />
      <Compile Include="Assets\Scripts\CakePlace.cs" />
+     <Compile Include="Assets\Scripts\ClickerZone.cs" />
      <Compile Include="Assets\Scripts\Cake\Cake.cs" />
      <Compile Include="Assets\Scripts\Cake\CakeLayer.cs" />
-     <Compile Include="Assets\Scripts\ClickerZone.cs" />
+     <Compile Include="Assets\Scripts\CakeCollector.cs" />
+     <Compile Include="Assets\Scripts\WalletDisplay.cs" />
+     <Compile Include="Assets\Scripts\CakeDispenser.cs" />
+     <Compile Include="Assets\Scripts\Shop\Shop.cs" />
+     <Compile Include="Assets\Scripts\ShopButton.cs" />
+     <Compile Include="Assets\Scripts\Shop\Item.cs" />
+     <Compile Include="Assets\Scripts\ScriptableObject\CakeShopItem.cs" />
      <None Include="Assets\TextMesh Pro\Shaders\TMPro.cginc" />
      <None Include="Assets\TextMesh Pro\Shaders\TMP_SDF-Mobile Overlay.shader" />
      <None Include="Assets\TextMesh Pro\Shaders\TMP_Bitmap.shader" />
